--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,156 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
+}
+.link:hover {
+  text-decoration: none;
+  color: black;
+}
+
 .flex {
   display: flex;
 }
 
 /* Header */
 
+.header {
+  width: 1280px;
+  height: 65px;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .logo-vinted {
   width: 100px;
 }
 
+.header input {
+  border: none;
+  background-color: #f5f6f7;
+  border-radius: 5px;
+  width: 632px;
+  margin: 5px 0;
+  padding: 8px 5px;
+}
+
+.header button {
+  margin: 10px 0;
+  padding: 5px 0;
+}
+
+.header div button {
+  border: solid 1px #2cb1ba;
+  border-radius: 5px;
+  color: #2cb1ba;
+  background-color: white;
+  width: 155px;
+  margin-right: 15px;
+}
+
+#sell {
+  border: solid 1px #2cb1ba;
+  border-radius: 5px;
+  color: white;
+  background-color: #2cb1ba;
+  padding: 5px 10px;
+}
+
 /* Home */
 
+.hero {
+  width: 100%;
+  height: 455px;
+  background-position-x: 50%;
+  background-position-y: center;
+  background-image: url("./img/hero-background.jpg");
+  background-size: cover;
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.hero-message {
+  height: 220px;
+  width: 360px;
+  background-color: #fff;
+  padding: 25px;
+  border-radius: 3px;
+  font-size: 34px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 75px;
+  left: 25px;
+  box-shadow: 0 0 2px rgb(17 17 17 / 24%);
+}
+
+.hero-message button {
+  height: 45px;
+  width: 187px;
+  background-color: #2baeb7;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  padding: 0 14px;
+  margin-top: 32px;
+}
+
+.hero img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 80px;
+}
+
 /* Item */
+
+.all-items {
+  justify-content: center;
+  display: flex;
+  width: 1280px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
+.individual-items {
+  margin: 5px 10px;
+}
+
+.individual-items p:not(:first-child) {
+  margin-top: 5px;
+  font-size: 12px;
+  color: grey;
+}
+
+.individual-items-description {
+  padding: 10px 5px;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
 
 .avatar {
   object-fit: cover;
   width: 25px;
   height: 25px;
   border-radius: 50%;
-}
-
-.product {
-  object-fit: cover;
-  width: 235px;
-  height: 428px;
-}
-
-.all-items {
-  display: flex;
-  width: 100vw;
-  flex-wrap: wrap;
-}
-
-.hero {
-  width: 100vw;
-  height: 600px;
-  background-image: url("./img/hero-background.jpg");
-  background-size: cover;
+  margin-right: 5px;
 }
 
 .offer-display {
@@ -43,12 +158,88 @@
   width: 100%;
 }
 
-/* offer */
-
-.offer {
-  display: flex;
+.product {
+  width: 235px;
+  height: 360px;
 }
 
-.offer-description {
-  border: black solid 2px;
+/* Offer */
+
+.offer-body {
+  height: calc(100vh - 60px);
+  background-color: #ebedee;
+}
+
+.offer {
+  position: relative;
+  padding-top: 30px;
+  display: flex;
+  margin: 0 auto;
+  width: 1280px;
+  justify-content: space-around;
+}
+
+.offer button {
+  margin-top: 50px;
+  width: 100%;
+  border: solid 1px #2cb1ba;
+  border-radius: 5px;
+  color: white;
+  background-color: #2cb1ba;
+  height: 36px;
+}
+
+.offer-box {
+  padding: 40px;
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+}
+
+.product-offer {
+  object-fit: cover;
+  width: 450px;
+  height: 605px;
+}
+
+.offer-description h2 {
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+.offer-description p {
+  line-height: 20px;
+  font-size: 14px;
+}
+
+.elements {
+  margin-right: 10px;
+  color: grey;
+}
+
+.offer-user p {
+  color: grey;
+  margin: 15px 0;
+}
+
+.user-offer {
+  display: flex;
+  align-items: center;
+}
+
+.line {
+  background-color: grey;
+  height: 1px;
+  width: 100%;
+  margin: 30px 0;
+}
+
+.avatar-offer {
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
