--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ body {
   padding: 5px 0;
 }
 
-.header div button {
+.header button {
   border: solid 1px #2cb1ba;
   border-radius: 5px;
   color: #2cb1ba;
@@ -255,4 +255,53 @@ body {
   height: 50px;
   border-radius: 50%;
   margin-right: 10px;
+}
+
+/* LOGIN & SIGNUP */
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  width: 220px;
+  margin-top: 30px;
+}
+
+.form-container h1 {
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.form-container input {
+  width: 100%;
+  border: none;
+  border-bottom: solid grey 1px;
+  padding: 10px 0;
+}
+
+.form-container input:focus {
+  outline: none;
+}
+
+.form-container button {
+  border: solid 1px #2cb1ba;
+  border-radius: 5px;
+  color: white;
+  background-color: #2cb1ba;
+  height: 36px;
+  width: 100%;
+  margin: 20px 0 10px 0;
+}
+
+.link-login-signup {
+  font-size: 12px;
+  color: #2cb1ba;
+  text-decoration: none;
+}
+
+.link-login-signup:hover {
+  color: #2cb1ba;
+  text-decoration: none;
 }
