--- a/src/App.css
+++ b/src/App.css
@@ -67,11 +67,21 @@ body {
   border-radius: 5px;
   color: #2cb1ba;
   background-color: white;
+  width: 140px;
+  margin-right: 15px;
+}
+
+#disconnect {
+  border: solid 1px #c2185a;
+  border-radius: 5px;
+  color: white;
+  background-color: #c2185a;
   width: 155px;
   margin-right: 15px;
 }
 
 #sell {
+  margin-right: 0px;
   border: solid 1px #2cb1ba;
   border-radius: 5px;
   color: white;
