--- a/src/App.css
+++ b/src/App.css
@@ -219,6 +219,11 @@ body {
   background-color: #ebedee;
 }
 
+.offer-body-2 {
+  height: 100%;
+  background-color: #ebedee;
+}
+
 .offer {
   position: relative;
   padding-top: 30px;
@@ -391,6 +396,106 @@ body {
   border-radius: 5px;
 }
 
+.publish {
+  background-color: white;
+  border-radius: 5px;
+  width: 400px;
+  margin: 30px auto;
+}
+
 .form-container h3 {
+  margin-top: 20px;
+  color: grey;
+}
+
+/* Payment */
+
+.payment-container {
+  margin-top: 50px;
+  text-align: center;
+  width: 400px;
+
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.payment-container h1 {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.payment-container input {
+  border: solid 1px #2cb1ba;
+  border-radius: 5px;
+  color: white;
+  background-color: #2cb1ba;
+  height: 36px;
+  width: 100%;
+  margin: 20px 0 10px 0;
+  opacity: 0.8;
+}
+
+.payment-container input:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.payment-item {
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
+  justify-self: unset;
+  flex-direction: column;
+  align-items: center;
+
+  margin-top: 50px;
+  width: 400px;
+  background-color: white;
+}
+
+.payment-item h1 {
+  margin: 10px 0;
+  margin-bottom: 20px;
+}
+
+.payment-item p {
+  color: grey;
+  margin-top: 5px;
+}
+
+/* Success */
+
+.success-box {
+  display: flex;
+
+  justify-content: center;
+}
+
+.success {
+  margin: 0 auto;
+  margin-top: 50px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.success h1 {
   margin-top: 10px;
+}
+
+.success button {
+  margin-top: 20px;
+  width: 100%;
+  border: solid 1px #2cb1ba;
+  border-radius: 5px;
+  color: white;
+  background-color: #2cb1ba;
+  height: 36px;
+  opacity: 0.8;
+}
+
+.success button:hover {
+  opacity: 1;
+  cursor: pointer;
 }
