--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,7 @@ body {
 }
 
 .offer-body-2 {
-  height: 100%;
+  height: 100vh;
   background-color: #ebedee;
 }
 
@@ -401,6 +401,7 @@ body {
   border-radius: 5px;
   width: 400px;
   margin: 30px auto;
+  margin-bottom: 80px;
 }
 
 .form-container h3 {
