--- a/src/App.css
+++ b/src/App.css
@@ -475,6 +475,7 @@ body {
 }
 
 .success {
+  text-align: center;
   margin: 0 auto;
   margin-top: 50px;
   background-color: white;
@@ -484,6 +485,12 @@ body {
 
 .success h1 {
   margin-top: 10px;
+}
+
+.success p {
+  margin-top: 15px;
+  color: grey;
+  font-size: 14px;
 }
 
 .success button {
