--- a/src/App.css
+++ b/src/App.css
@@ -418,7 +418,7 @@ body {
   width: 400px;
 
   background-color: white;
-  padding: 10px;
+  padding: 10px 20px 10px 20px;
   border-radius: 5px;
 }
 
@@ -463,7 +463,14 @@ body {
 
 .payment-item p {
   color: grey;
-  margin-top: 5px;
+  margin-top: 20px;
+}
+
+.total {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 25px 0;
 }
 
 /* Success */
